Fix crash when invisible placemarks are selected and not yet in the viewport

BUG: 285853